# CalyxFlow

./: .gitignore  .gitmodules  LICENSE  README.md  build_lammps.sh  lammps_input.txt  pyproject.toml
run-scripts/: download_hf_model.sh  download_ollama_model.sh  list_ollama_models.sh  run_lammps_workflow.sh  run_vllm.sh  setup_ollama.sh
src/: lammps_tools.py  lammps_workflow.py
src/instructions/: io.txt  lammps.txt
